--- a/xmentas.html
+++ b/xmentas.html
@@ -40,7 +40,7 @@
             <source src="theme97.mp3" type="audio/mp3"> 
        </audio>
        <br>
-       <a href="main.html"> X-men: Quadrinhos</a>
+       <a href="index.html"> X-men: Quadrinhos</a>
        
     </div>
 
