--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
             </table>
 
-            <a rel="external" target="_blank" href= “https://pt.wikipedia.org/wiki/X-Men"> Wikipédia X-men</a>
+            <a href= "https://pt.wikipedia.org/wiki/X-Men"> Wikipédia X-men</a>
             <br> <a href= "xmentas.html"> X-men: A Série Animada</a>
             <br> <a href="#topo">Voltar ao topo</a>
     </div>
