--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
     <body>
 
     <!-- Cabeçalho --> 
-    <div>
-            <h1 id="topo">
-                X-men Cronologia</h1>
+    <div class="cabeca">
+            <h1 id="topo">X-men Cronologia</h1>
+
+	<!-- BARRA MENU--> 
+	<nav>
+		<ul class="BARRA">
+			<li><a href="#">Primeira Classe</a</li>
+			<li><a href="#">Segunda Gênese</a></li>
+			<li><a href="#">Byrne/Claremont</a></li>
+			<li><a href="#">Saga da Ninhada</a></li>
+			<li><a href="#">Saga dos X-men</a></li>
+		</ul>
+</nav>
     </div>
     
     <!-- DIV- Menu da esquerda --> 
@@ -27,6 +37,8 @@
     </div>
     
     <br>
+
+
 
     <!-- DIV- Corpo da Página--> 
     <div class="corpo" >
@@ -54,7 +66,7 @@
             <h3>X-men: A Segunda Gênese (1975)</h3>
             <img src="dave.webp" width="300px">
             <p> X-men Giant Size #01</p>
-            <p> X-men #94-95: Conde Nefária</p>
+            <p> X-men #94-95: Conde Nefária e Morte de um X-man</p>
             <p> X-men #96-97: Eric Escarlate</p>
             <p> X-men #98-101: O surgimento da Fênix</p>
             <p> X-men #102-103: Fanático e Black Tom Cassidy</p>
@@ -169,23 +181,49 @@
 			<p> Minisérie Magik: Tempestade e Illyana</p>
 			<p> X-men #161-166: Saga da Ninhada Parte 2</p>
 			<p> Marvel Graphic Novel (1982) #4</p>
-			<p>New Mutants (1983) #1-3</p>
+			<p> New Mutants (1983) #1-3</p>
 			<p> X-men #167: Saga da Ninhada Parte 3 Final</p>
 			
-			<h3>A Saga dos X-men</h3>
-			<p>X-men #168-171: Murlocks</p>
+			<h3>A Saga dos X-men Vol 1 e 2</h3>
 			<p>Deus Ama o Homem Mata</p>
+			<p>X-men #168-171: Murlocks</p>
 			<p>Wolverine(minissérie 1982) #1-4</p>
 			<p>X-men #172-175: Casamento</p>
-            <br><br><br>
 
-			<h3>Guerras Asgardianas</h3>
+			<h3> A Saga dos X-men Volume 03 (Opcional)</h3>
+			<p>X-men #176: Ciclope e Madelyne</p>
+			<p>X-men #177-178: Irmandade de Mutantes</p>
+			<p>X-men 179 Caliban e Kitty</p>
+			<p>X-men #180: Kitty e Tempestade (Gancho para Guerra Secretas)</p>
+			<p>Guerras Secretas </p>
+			<p> filler - X-men #181: Ligação pós-Guerras Secretas</p>
+
+			<h3> Saga dos X-men Volume 04</h3>
+			<p>X-men #182: Vampira vs Shield</p>
+			<p>X-men #183: Colossus vs Fanático</p>
+			<p>Minisérie Kitty e WOLVERINE</p>
+			<p>X-men #184: Rachel Summers e Forge</p>
+			<p>X-men #185: Tempestade perde os poderes</p>
+			
+			<h3>Guerras Asgardianas Parte 1</h3>
+			<p> X-Men/Alpha Flight (1985) n° 1</p>
+			<p> X-Men/Alpha Flight (1985) n° 2</p>
+			<p>X-men #193</p>
+
+			<h3>Rachel Ganha poderes da fênix</h3>
+			<p>X-men #199: Rachel Fênix</p>
+
+			<h3>Guerras Asgardianas Parte 2</h3>
+			<p>New Mutants Special Edition (1985) n° 1/1985 </p>
+			<p>X-Men Annual (1970) n° 9/</p> 
+
+			<h3>Julgamento do Magneto</h3>
+			<p>X-men #200: Julgamento de Magneto (background guerras asgardianas)</p>
 
 			<h3>Ascenção da Fênix</h3>
-			<p> Avengers, The (1963) n° 263/
-				Fantastic Four (1961) n° 286
-				X-Factor (1986) n° 1
-			</p>
+			<p> Avengers, The (1963) n° 263</p>
+			<p>	Fantastic Four (1961) n° 286</p>
+			<p>	X-Factor (1986) n° 1</p>
 
 			<h3 class="massacre">Massacre dos Mutantes</h3>
 			<p class="oculto"> Uncanny X-Men #210
@@ -240,8 +278,10 @@
 				</tr>
 
             </table>
-
-            <a href= "https://pt.wikipedia.org/wiki/X-Men"> Wikipédia X-men</a>
+			<a href="https://www.google.com/">clique aqui
+			</a>
+			<br>
+			<a href= "https://pt.wikipedia.org/wiki/X-Men"> Wikipédia X-men</a>
             <br> <a href= "xmentas.html"> X-men: A Série Animada</a>
             <br> <a href="#topo">Voltar ao topo</a>
     </div>
