--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 	<!-- BARRA MENU--> 
 	<nav>
-		<ul class="BARRA">
+		<ul class="barra">
 			<li><a href="#">Primeira Classe</a</li>
 			<li><a href="#">Segunda Gênese</a></li>
 			<li><a href="#">Byrne/Claremont</a></li>
 			<li><a href="#">Saga da Ninhada</a></li>
 			<li><a href="#">Saga dos X-men</a></li>
 		</ul>
-</nav>
+	</nav>
     </div>
     
     <!-- DIV- Menu da esquerda --> 
